--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,18 +11,22 @@
     --yellow:#FFC400;
     --green: #00D392;
     --gray:#808080;
+    --black: #000000
     --ligth-gray: #D9D9D9;
     --blue:#356CA6;
     --bg-gradient: linear-gradient(360deg, #346CA6 0%, #00D392 100%);
 }
 
 body{ background-color: var(--bg-page); }
+header{width: 100%; height: 100px;}
+main{height: calc(100vh - 100px);}
 
 /* COLORS */
 .bg-primary{ background-color: var(--bg-primary-color)!important; }
 .bg-secondary{ background-color: var(--bg-secondary-color)!important; }
 .bg-terciary{background-color: var(--bg-terciary-color);}
 .bg-card{background-color: var(--bg-card);}
+.bg-white{background-color: var(--white);}
 .white{color: var(--white)}
 .yellow{color:var(--yellow)}
 .green{color: var(--green);}
@@ -34,60 +38,40 @@ body{ background-color: var(--bg-page); }
 
 /* END COLORS */
 
+
+
 /* TEXTs */
     h2{ color: var(--bg-primary-color) ;}
-    .icon-menu{font-size: 32px;}
+    p{margin-bottom: 0px;}
 /* END TEXTs */
-
-.img-adapt{ width: 200px; height: 185px; margin: 0 auto;}
-.rounded-icons-header{ width: 25px; height: 25px; text-align: center; margin: 1px 5px; font-size: 13px;}
-.svg-inline--fa{vertical-align: middle;}
-.custom-height{height: 52vh;}
-.custom-height-card{height: 131px;}
-.first-colum-table{border-radius: 10px 0px 0px 10px;}
-.last-colum-table{border-radius: 0px 10px 10px 00px;}
-.table-responsive{overflow-y: scroll; height: 300px;}
-.thead-sticly{position: sticky;top: 0;z-index: 10;background-color: var(--bg-card);}
-.input-group-text{background-color: var(--white); border: none; box-shadow: 1px 1px 10px 2px #cccccc; color: #AAAAAA;}
-.form-select{border: 1px solid transparent; box-shadow: 7px 0px 12px 2px #cccccc; color: #AAAAAA;}
-.border-custom{border: 1px solid var(--gray);}
-.form-control-custom{ border: none; box-shadow: 8px 1px 10px 2px #cccccc;}
-.form-control-custom::placeholder{ color: var(--gray);}
-.img-icon{ width: 20px;}
 
 
 /* ELEMENTS */
     .card{ box-shadow: 0px 7px 24px rgba(0, 0, 0, 0.25); border-radius: 10px; border: none; color:#AAAAAA}
+    .card img {margin: 0 auto; display: flex; border: 1px solid; border-radius: 50%; padding: 24px;}
+    .active{background-color: var(--bg-primary-color); color:var(--white)!important;}
+    .active .gray{color:var(--white)!important;}
+    .nav-link{color: var(--black);}
+    .nav-link:hover{background-color: var(--bg-primary-color); color:var(--white)!important;}
+    .nav-link:hover .gray{ color:var(--white)!important;}
+    a:hover{color: var(--white);}
+    a i:hover{color: var(--white);}
 /* END ELEMENTS */
 
-/* MENU */
-    .nav-link{
-        padding: 26px 10px;
-        text-align: center;
-        font-size: 16px;
-        color: var(--gray);
-    }
 
-    .nav-item{width: 131px;height: 110px;border-radius: 30px;}
-
-    .nav-item:hover{background: var(--bg-gradient);}
-    .nav-item:hover .nav-link{color: var(--white);}
-    .nav-item .active{background: var(--bg-gradient); color: var(--white); border-radius: 30px;}
-
-    .menu .nav-item{width: 100%;}
-    .menu .nav-item:hover{background: transparent;}
-    .menu .nav-item .active{background: transparent; color: var(--gray);}
-    .menu .nav-item:hover .nav-link{color: var(--ligth-gray);}
-    
-/* END MENU */
 
 
 
 /* RESPONSIVE */
-@media screen and (max-width:765px) {
-    
-        .custom-height {height: 922px;}
-        .icon-menu{font-size: 23px;}
-        .input-group{width: 100%;}
+@media screen and (max-width:1023px) {
+    #menu{position: absolute;
+        width: 64%;
+        z-index: 999;
+        height: 100%;
+        margin-left: -100%;}
+}
+
+@media screen and (max-width:1999px) {
+   
 }
 /* END RESPONSIVE */
