--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
     --yellow:#FFC400;
     --green: #00D392;
     --gray:#808080;
-    --black: #000000
+    --black: #000000;
     --ligth-gray: #D9D9D9;
     --blue:#356CA6;
     --bg-gradient: linear-gradient(360deg, #346CA6 0%, #00D392 100%);
@@ -27,15 +27,18 @@ main{height: calc(100vh - 100px);}
 .bg-terciary{background-color: var(--bg-terciary-color);}
 .bg-card{background-color: var(--bg-card);}
 .bg-white{background-color: var(--white);}
-.white{color: var(--white)}
+.white{color: var(--white)!important}
 .yellow{color:var(--yellow)}
 .green{color: var(--green);}
 .gray{color: var(--gray);}
 .blue{color: var(--blue);}
+.black{color: var(--black)!important;}
 .bg-ligth-gray{background-color: var(--ligth-gray);}
 .bg-gradient-menu{background: var(--bg-gradient)!important;}
 .btn-green{background-color: var(--green);}
-
+.border-left-color-primary{ border-left: 6px solid var(--bg-primary-color)!important;}
+.border-left-color-secondary{ border-left: 6px solid var(--green)!important;}
+.border-left-color-third{ border-left: 6px solid var(--bg-primary-color)!important;}
 /* END COLORS */
 
 
@@ -56,6 +59,11 @@ main{height: calc(100vh - 100px);}
     .nav-link:hover .gray{ color:var(--white)!important;}
     a:hover{color: var(--white);}
     a i:hover{color: var(--white);}
+    .input-group-text{background-color: var(--white); border: none; box-shadow: 1px 1px 10px 2px #cccccc; color: #AAAAAA;}
+    .form-select{border: 1px solid transparent; box-shadow: 7px 0px 12px 2px #cccccc; color: #AAAAAA;}
+    .border-custom{border: 1px solid var(--gray);}
+    .form-control-custom{ border: none; box-shadow: 8px 1px 10px 2px #cccccc;}
+    .form-control-custom::placeholder{ color: var(--gray);}
 /* END ELEMENTS */
 
 
@@ -68,7 +76,8 @@ main{height: calc(100vh - 100px);}
         width: 64%;
         z-index: 999;
         height: 100%;
-        margin-left: -100%;}
+        margin-left: -100%;
+    transition: ease-in-out .3s;}
 }
 
 @media screen and (max-width:1999px) {
