--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,13 @@
     --bg-secondary-color: #00D392;
     --bg-terciary-color:#5C89B7;
     --primary-color: #00B1ED;
+    --secondary-color: #346CA6;
     --bg-card: #F2F6F9;
     --white: #FFF;
     --yellow:#FFC400;
     --green: #00D392;
     --gray:#808080;
+    --red: #FF203A;
     --black: #000000;
     --ligth-gray: #D9D9D9;
     --blue:#356CA6;
@@ -25,6 +27,7 @@ main{height: calc(100vh - 100px);}
 .bg-primary{ background-color: var(--bg-primary-color)!important; }
 .bg-secondary{ background-color: var(--bg-secondary-color)!important; }
 .bg-terciary{background-color: var(--bg-terciary-color);}
+.bg-fourth{background-color: var(--secondary-color);}
 .bg-card{background-color: var(--bg-card);}
 .bg-white{background-color: var(--white);}
 .white{color: var(--white)!important}
@@ -36,9 +39,13 @@ main{height: calc(100vh - 100px);}
 .bg-ligth-gray{background-color: var(--ligth-gray);}
 .bg-gradient-menu{background: var(--bg-gradient)!important;}
 .btn-green{background-color: var(--green);}
+.btn-blue{background-color: var(--secondary-color);}
+.btn-red{background-color: var(--red);}
+.btn-primary{background-color: var(--bg-primary-color);}
 .border-left-color-primary{ border-left: 6px solid var(--bg-primary-color)!important;}
 .border-left-color-secondary{ border-left: 6px solid var(--green)!important;}
-.border-left-color-third{ border-left: 6px solid var(--bg-primary-color)!important;}
+.border-left-color-third{ border-left: 6px solid var(--secondary-color)!important;}
+.border-left-color-four{ border-left: 6px solid var(--red)!important;}
 /* END COLORS */
 
 
