--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,76 +1,249 @@
-*{margin: 0; padding: 0; box-sizing: border-box;}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-:root{
+:root {
     --bg-page: #ECECED;
     --bg-primary-color: #00B1ED;
     --bg-secondary-color: #00D392;
-    --bg-terciary-color:#5C89B7;
+    --bg-terciary-color: #5C89B7;
     --primary-color: #00B1ED;
     --secondary-color: #346CA6;
     --bg-card: #F2F6F9;
     --white: #FFF;
-    --yellow:#FFC400;
+    --yellow: #FFC400;
     --green: #00D392;
-    --gray:#808080;
+    --gray: #808080;
     --red: #FF203A;
     --black: #000000;
     --ligth-gray: #D9D9D9;
-    --blue:#356CA6;
+    --blue: #356CA6;
     --bg-gradient: linear-gradient(360deg, #346CA6 0%, #00D392 100%);
 }
 
-body{ background-color: var(--bg-page); }
-header{width: 100%; height: 100px;}
-main{height: calc(100vh - 100px);}
+body {
+    background-color: var(--bg-page);
+}
+
+header {
+    width: 100%;
+    height: 100px;
+}
+
+main {
+    height: calc(100vh - 100px);
+}
 
 /* COLORS */
-.bg-primary{ background-color: var(--bg-primary-color)!important; }
-.bg-secondary{ background-color: var(--bg-secondary-color)!important; }
-.bg-terciary{background-color: var(--bg-terciary-color);}
-.bg-fourth{background-color: var(--secondary-color);}
-.bg-card{background-color: var(--bg-card);}
-.bg-white{background-color: var(--white);}
-.white{color: var(--white)!important}
-.yellow{color:var(--yellow)}
-.green{color: var(--green);}
-.gray{color: var(--gray);}
-.blue{color: var(--blue);}
-.black{color: var(--black)!important;}
-.bg-ligth-gray{background-color: var(--ligth-gray);}
-.bg-gradient-menu{background: var(--bg-gradient)!important;}
-.btn-green{background-color: var(--green);}
-.btn-blue{background-color: var(--secondary-color);}
-.btn-red{background-color: var(--red);}
-.btn-primary{background-color: var(--bg-primary-color);}
-.border-left-color-primary{ border-left: 6px solid var(--bg-primary-color)!important;}
-.border-left-color-secondary{ border-left: 6px solid var(--green)!important;}
-.border-left-color-third{ border-left: 6px solid var(--secondary-color)!important;}
-.border-left-color-four{ border-left: 6px solid var(--red)!important;}
+.bg-primary {
+    background-color: var(--bg-primary-color) !important;
+}
+
+.bg-secondary {
+    background-color: var(--bg-secondary-color) !important;
+}
+
+.bg-terciary {
+    background-color: var(--bg-terciary-color);
+}
+
+.bg-fourth {
+    background-color: var(--secondary-color);
+}
+
+.bg-yellow{ background-color: var(--yellow);}
+
+.bg-card {
+    background-color: var(--bg-card);
+}
+
+.bg-white {
+    background-color: var(--white);
+}
+
+.white {
+    color: var(--white) !important
+}
+
+.yellow {
+    color: var(--yellow)
+}
+
+.green {
+    color: var(--green);
+}
+
+.gray {
+    color: var(--gray);
+}
+
+a.gray:hover {
+    color: #a9a7a7;
+}
+
+.blue {
+    color: var(--blue);
+}
+
+.black {
+    color: var(--black) !important;
+}
+
+.bg-ligth-gray {
+    background-color: var(--ligth-gray);
+}
+
+.bg-gradient-menu {
+    background: var(--bg-gradient) !important;
+}
+
+.btn-green {
+    background-color: var(--green);
+}
+
+.btn-green:hover {
+    background-color: #07c389;
+}
+
+.btn-blue {
+    background-color: var(--secondary-color);
+}
+
+.btn-red {
+    background-color: var(--red);
+}
+
+.btn-yellow{ background-color: var(--yellow)}
+
+button.btn-red:hover {
+    background-color: #ed374c;
+}
+
+.btn-primary {
+    background-color: var(--bg-primary-color);
+}
+
+.border-left-color-primary {
+    border-left: 6px solid var(--bg-primary-color) !important;
+}
+
+.border-left-color-secondary {
+    border-left: 6px solid var(--green) !important;
+}
+
+.border-left-color-third {
+    border-left: 6px solid var(--secondary-color) !important;
+}
+
+.border-left-color-four {
+    border-left: 6px solid var(--red) !important;
+}
+
+.border-left-color-yellow {
+    border-left: 6px solid var(--yellow) !important;
+}
+
 /* END COLORS */
 
 
 
 /* TEXTs */
-    h2{ color: var(--bg-primary-color) ;}
-    p{margin-bottom: 0px;}
+h2 {
+    color: var(--bg-primary-color);
+}
+
+p {
+    margin-bottom: 0px;
+}
+
+.icon-congratulations{font-size: 92px;}
 /* END TEXTs */
 
 
 /* ELEMENTS */
-    .card{ box-shadow: 0px 7px 24px rgba(0, 0, 0, 0.25); border-radius: 10px; border: none; color:#AAAAAA}
-    .card img {margin: 0 auto; display: flex; border: 1px solid; border-radius: 50%; padding: 24px;}
-    .active{background-color: var(--bg-primary-color); color:var(--white)!important;}
-    .active .gray{color:var(--white)!important;}
-    .nav-link{color: var(--black);}
-    .nav-link:hover{background-color: var(--bg-primary-color); color:var(--white)!important;}
-    .nav-link:hover .gray{ color:var(--white)!important;}
-    a:hover{color: var(--white);}
-    a i:hover{color: var(--white);}
-    .input-group-text{background-color: var(--white); border: none; box-shadow: 1px 1px 10px 2px #cccccc; color: #AAAAAA;}
-    .form-select{border: 1px solid transparent; box-shadow: 7px 0px 12px 2px #cccccc; color: #AAAAAA;}
-    .border-custom{border: 1px solid var(--gray);}
-    .form-control-custom{ border: none; box-shadow: 8px 1px 10px 2px #cccccc;}
-    .form-control-custom::placeholder{ color: var(--gray);}
+.card {
+    box-shadow: 0px 7px 24px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    border: none;
+    color: #AAAAAA
+}
+
+.card img {
+    margin: 0 auto;
+    display: flex;
+    /* border: 1px solid; */
+    border-radius: 50%;
+    padding: 24px;
+}
+
+.active {
+    background-color: var(--bg-primary-color);
+    color: var(--white) !important;
+}
+
+.active .gray {
+    color: var(--white) !important;
+}
+
+.nav-link {
+    color: var(--black);
+}
+
+.nav-link:hover {
+    background-color: var(--bg-primary-color);
+    color: var(--white) !important;
+}
+
+.nav-link:hover .gray {
+    color: var(--white) !important;
+}
+
+a:hover {
+    color: var(--white);
+}
+
+a i:hover {
+    color: var(--white);
+}
+
+.input-group-text {
+    background-color: var(--white);
+    border: none;
+    box-shadow: 1px 1px 10px 2px #cccccc;
+    color: #AAAAAA;
+}
+
+.form-select {
+    border: 1px solid transparent;
+    box-shadow: 7px 0px 12px 2px #cccccc;
+    color: #AAAAAA;
+}
+
+.border-custom {
+    border: 1px solid var(--gray);
+}
+
+.form-control-custom {
+    border: none;
+    box-shadow: 8px 1px 10px 2px #cccccc;
+}
+
+.form-control-custom::placeholder {
+    color: var(--gray);
+}
+
+a img {
+    margin: 0!important;
+    display: inline!important;
+    border: none!important;
+    border-radius: 0!important;
+    padding: 0px!important;
+}
+
+.img-oferta-custom{padding: 15px 8px!important;}
+
 /* END ELEMENTS */
 
 
@@ -79,15 +252,16 @@ main{height: calc(100vh - 100px);}
 
 /* RESPONSIVE */
 @media screen and (max-width:1023px) {
-    #menu{position: absolute;
+    #menu {
+        position: absolute;
         width: 64%;
         z-index: 999;
         height: 100%;
         margin-left: -100%;
-    transition: ease-in-out .3s;}
+        transition: ease-in-out .3s;
+    }
 }
 
-@media screen and (max-width:1999px) {
-   
-}
+@media screen and (max-width:1999px) {}
+
 /* END RESPONSIVE */
